--- a/common/ui/popup.html
+++ b/common/ui/popup.html
@@ -160,7 +160,7 @@
                     ng-show='contact.usesMe'></span>
                 <span class="c-icon" ng-show='contact.onGoogle'>G+</span>
                 <span class="c-icon" ng-show='contact.onFB'>FB</span>
-                <span class="c-icon" ng-show='contact.onXMPP'> XMPP </span>
+                <span class="c-icon" ng-show='contact.onXMPP'> XM </span>
                 <span class="c-icon canUProxy" ng-show="contact.canUProxy"></span>
               </span>
               <span class="c-notification" ng-show='contact.hasNotification'> ! </span>
