make bower_components go to lib, begin ui isolation

--- a/common/ui/popup.html
+++ b/common/ui/popup.html
@@ -6,11 +6,11 @@
     <link href="styles/main.css" rel="stylesheet">
 
     <!-- build:js scripts/popup.js -->
-    <script src="bower_components/lodash/dist/lodash.js"></script>
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/angular-animate/angular-animate.js"></script>
-    <script src="bower_components/angular-lodash/angular-lodash.js"></script>
-    <!--script src="bower_components/oauth2-extensions/lib/oauth2.js"></script-->
+    <script src="lib/lodash/dist/lodash.js"></script>
+    <script src="lib/angular/angular.js"></script>
+    <script src="lib/angular-animate/angular-animate.js"></script>
+    <script src="lib/angular-lodash/angular-lodash.js"></script>
+    <!--script src="lib/oauth2-extensions/lib/oauth2.js"></script-->
 
     <script src="scripts/app.js"></script>
     <script src="scripts/popup.js"></script>
