--- a/common/ui/popup.html
+++ b/common/ui/popup.html
@@ -6,13 +6,13 @@
     <link href="styles/main.css" rel="stylesheet">
 
     <!-- build:js scripts/popup.js -->
+    <script src="lib/jquery/jquery.js"></script>
     <script src="lib/lodash/dist/lodash.js"></script>
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-animate/angular-animate.js"></script>
     <script src="lib/angular-lodash/angular-lodash.js"></script>
     <!--script src="lib/oauth2-extensions/lib/oauth2.js"></script-->
 
-    <script src="scripts/ui.js"></script>
     <script src="scripts/app.js"></script>
     <script src="scripts/popup.js"></script>
     <script src="../../scripts/dependencies.js"></script>
