--- a/common/ui/popup.html
+++ b/common/ui/popup.html
@@ -15,6 +15,7 @@
 
     <script src="scripts/app.js"></script>
     <script src="scripts/popup.js"></script>
+    <script src="scripts/ui.js"></script>
     <script src="../../scripts/dependencies.js"></script>
     <!-- endbuild -->
 
