--- a/common/ui/options.html
+++ b/common/ui/options.html
@@ -6,9 +6,9 @@
     <link href="styles/main.css" rel="stylesheet">
 
     <!-- build:js scripts/options.js -->
-    <script src="bower_components/lodash/dist/lodash.js"></script>
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/angular-lodash/angular-lodash.js"></script>
+    <script src="lib/lodash/dist/lodash.js"></script>
+    <script src="lib/angular/angular.js"></script>
+    <script src="lib/angular-lodash/angular-lodash.js"></script>
 
     <script src="scripts/app.js"></script>
     <script src="scripts/options.js"></script>
