refactor instance actions into its own angular controller, cleanups

--- a/common/ui/popup.html
+++ b/common/ui/popup.html
@@ -229,7 +229,7 @@
           {{ ui.contact.name }} does not have <b>uProxy</b>.
           </p>
 
-          <div class="instance-actions" ng-show="ui.instance && ui.accessView">
+          <div ng-controller="InstanceActions" class="instance-actions" ng-show="ui.instance && ui.accessView">
 
             <div class="uproxy-box proxy"
                 ng-switch="ui.instance.trust.asProxy">
