--- a/common/ui/popup.html
+++ b/common/ui/popup.html
@@ -28,11 +28,11 @@
       </div>
       <span class="description">Safe Passage for the Web.</span>
 
-      <div class="app-missing-warning" ng-hide="uProxyAppConnected">
+      <div class="app-missing-warning" ng-hide="ui.isConnected">
         You need to install the UProxy app as well as the UProxy extension.
       </div>
 
-      <div ng-show="uProxyAppConnected">
+      <div ng-show="ui.isConnected">
         <input type="text" ng-model="model.me.description"
             id="my-description"
             placeholder="Device description"
