--- a/src/generic_ui/popup.html
+++ b/src/generic_ui/popup.html
@@ -10,11 +10,10 @@
     <script src="lib/angular-animate/angular-animate.js"></script>
     <script src="lib/angular-lodash/angular-lodash.js"></script>
 
-    <script src="js/app.js"></script>
-    <script src="js/popup.js"></script>
-    <script src="js/state.js"></script>
-    <script src="js/ui.js"></script>
-    <script src="js/dependencies.js"></script>
+    <script src="scripts/app.js"></script>
+    <script src="scripts/popup.js"></script>
+    <script src="scripts/state.js"></script>
+    <script src="scripts/dependencies.js"></script>
 
   </head>
   <!-- TODO: i18n -->
