fix minor manifest json format which broke everything. done to then for storage

--- a/src/chrome_app/uproxy.html
+++ b/src/chrome_app/uproxy.html
@@ -9,7 +9,9 @@
     <script type='text/javascript' src='js/freedom-config.js'></script>
     <script src='lib/freedom.js' data-manifest='uproxy_core/uproxy.json'>
       {
-        "debug": false
+        "strongIsolation": true,
+        "stayLocal": true,
+        "debug": true
       }
     </script>
     <script type='text/javascript' src='js/plumbing.js'></script>
