re-add freedom for now for the websocket social provider

--- a/src/chrome_app/uproxy.html
+++ b/src/chrome_app/uproxy.html
@@ -11,7 +11,7 @@
       {
         "strongIsolation": true,
         "stayLocal": true,
-        "debug": true
+        "debug": false
       }
     </script>
     <script type='text/javascript' src='js/plumbing.js'></script>
