--- a/src/chrome_app/uproxy.html
+++ b/src/chrome_app/uproxy.html
@@ -6,6 +6,7 @@
     <script type='text/javascript' src='scripts/auth_facebook.js'></script>
     <script type='text/javascript' src='scripts/auth_xmpp.js'></script>
     <script type='text/javascript' src='scripts/view_oauth.js'></script>
+    <script type='text/javascript' src='scripts/chrome_glue.js'></script>
     <script type='text/javascript' src='scripts/freedom-config.js'></script>
     <script src='lib/freedom-for-chrome.js'
             data-manifest='uproxy_core/uproxy.json'>
