--- a/src/chrome/app/uproxy.html
+++ b/src/chrome/app/uproxy.html
@@ -9,7 +9,7 @@
     <script type='text/javascript' src='scripts/chrome_glue.js'></script>
     <script type='text/javascript' src='scripts/freedom-config.js'></script>
     <script src='lib/freedom-for-chrome.js'
-            data-manifest='uproxy_core/uproxy.json'>
+            data-manifest='scripts/uproxy.json'>
       {
         "strongIsolation": true,
         "stayLocal": true,
