--- a/src/generic_ui/options.html
+++ b/src/generic_ui/options.html
@@ -19,7 +19,7 @@
   <body ng-cloak ng-controller="OptionsCtrl" id="options">
     <h3>{{'options'|i18n}}</h3>
 
-    <div class="app-missing-warning" ng-hide="ui.isConnected">
+    <div class="app-missing-warning" ng-hide="core.status.connected">
       You need to install the UProxy app as well as the UProxy extension.
     </div>
 
@@ -27,11 +27,11 @@
       <label>
         Networks:
       </label>
-        <span ng-repeat="network in ui.networks">
+        <span ng-repeat="(network, detail) in model.networks">
           <button class="btn" ng-show="!isOnline(network)"
-            ng-click="login(network)">Login to {{ prettyNetworkName(network) }}</button>
+            ng-click="core.login(network)">Login to {{ prettyNetworkName(network) }}</button>
           <button class="btn" ng-show="isOnline(network)"
-            ng-click="logout(network)">Logout from {{ prettyNetworkName(network) }}</button>
+            ng-click="core.logout(network)">Logout from {{ prettyNetworkName(network) }}</button>
         </span>
     <h4>Instances</h4>
     <div id="contacts-frame">
