--- a/src/generic_ui/popup.html
+++ b/src/generic_ui/popup.html
@@ -45,11 +45,11 @@
           <h3>Networks</h3>
 
           <div class="network-btn">
-            <span ng-repeat="network in model.networks">
+            <span ng-repeat="(network, detail) in model.networks">
               <button class="btn" ng-show="!isOnline(network)"
-                ng-click="core.login(network)">Login to {{ prettyNetworkName(network.name) }}</button>
+                ng-click="core.login(network)">Login to {{ prettyNetworkName(network) }}</button>
               <button class="btn" ng-show="isOnline(network)"
-                ng-click="core.logout(network)">Logout from {{ prettyNetworkName(network.name) }}</button>
+                ng-click="core.logout(network)">Logout from {{ prettyNetworkName(network) }}</button>
             </span>
           </div>
         </div>
