--- a/src/generic_ui/consent.html
+++ b/src/generic_ui/consent.html
@@ -23,6 +23,7 @@
         Stop
       </button>
     </div>
+
     <div ng-switch-when="requested">
       <p class="uproxytip">
         Requesting access from {{ui.user.name}}...
@@ -75,12 +76,12 @@
       </p>
       <button class="btn black"
           ng-disabled="ui.pendingClientTrustChange"
-          ng-click="grantAccess(ui.instance)">
+          ng-click="allowRequest(ui.instance)">
         Grant
       </button>
       <button class="btn"
           ng-disabled="ui.pendingClientTrustChange"
-          ng-click="denyAccess(ui.instance)">
+          ng-click="ignoreRequest(ui.instance)">
         Ignore
       </button>
     </div>
@@ -89,7 +90,7 @@
       </p>
       <button class="btn"
           ng-disabled="ui.pendingClientTrustChange"
-          ng-click="revokeAccess(ui.instance)">
+          ng-click="cancelOffer(ui.instance)">
         Revoke Access
       </button>
     </div>
