--- a/src/generic_ui/popup.html
+++ b/src/generic_ui/popup.html
@@ -10,6 +10,9 @@
     <script src="lib/angular-animate/angular-animate.js"></script>
     <script src="lib/angular-lodash/angular-lodash.js"></script>
 
+    <script src="scripts/uproxy.js"></script>
+    <script src="scripts/util.js"></script>
+    <script src="scripts/consent.js"></script>
     <script src="scripts/user.js"></script>
     <script src="scripts/app.js"></script>
     <script src="scripts/popup.js"></script>
