--- a/src/generic_ui/consent.html
+++ b/src/generic_ui/consent.html
@@ -7,17 +7,13 @@
       </p>
       <button class="btn"
           ng-disabled="ui.pendingProxyTrustChange"
-          ng-show="'off'==ui.instance.status.proxy"
+          ng-hide="ui.instance.access.asProxy"
           ng-click="startAccess(ui.instance)">
         Start
       </button>
-      <div class="btn"
-          ng-disabled="ui.pendingProxyTrustChange"
-          ng-show="'ready'==ui.instance.status.proxy">
-        Setting up proxy...
-      </div>
+      <!-- -->
       <button class="btn"
-          ng-hide="'off'==ui.instance.status.proxy"
+          ng-show="ui.instance.access.asProxy"
           ng-disabled="ui.pendingProxyTrustChange"
           ng-click="stopAccess(ui.instance)">
         Stop
