--- a/src/generic_ui/consent.html
+++ b/src/generic_ui/consent.html
@@ -11,7 +11,7 @@
           ng-click="startAccess(ui.instance)">
         Start
       </button>
-      <!-- -->
+      <!-- TODO: Include an indicator for when proxying is starting up.-->
       <button class="btn"
           ng-show="ui.instance.access.asProxy"
           ng-disabled="ui.pendingProxyTrustChange"
