Add promise commands to ext/app interaction.  Change login to automatically advance you to the buddy list.

--- a/src/generic_ui/popup.html
+++ b/src/generic_ui/popup.html
@@ -55,7 +55,7 @@
           <div class="network-btn">
             <span ng-repeat="(network, detail) in model.networks">
               <button class="btn" ng-show="!isOnline(network)"
-                ng-click="core.login(network)">Login to {{ prettyNetworkName(network) }}</button>
+              ng-click="login(network)">Login to {{ prettyNetworkName(network) }}</button>
               <button class="btn" ng-show="isOnline(network)"
                 ng-click="core.logout(network)">Logout from {{ prettyNetworkName(network) }}</button>
             </span>
