Change G+ to Google

--- a/src/generic_ui/popup.html
+++ b/src/generic_ui/popup.html
@@ -186,7 +186,7 @@
             <div class="picCover"></div>
             <div class="description">
               <p>{{ui.instance.description}}</p>
-              <span ng-show="ui.user.onGoogle"> G+ </span>
+              <span ng-show="ui.user.onGoogle"> Google </span>
               <span ng-show="ui.user.onFB"> FB </span>
             </div>
 
