Hide description entry, retry re-connection every second (had been every 2 seconds)

--- a/src/generic_ui/popup.html
+++ b/src/generic_ui/popup.html
@@ -38,6 +38,7 @@
       </div>
 
       <div ng-show="core.status.connected">
+        <!-- TODO: re-enable when we have descriptions ready for use.
         <input type="text" ng-model="model.me.description"
             id="my-description"
             placeholder="Device description"
@@ -48,6 +49,7 @@
           Please describe your device.
           This description will be visible to friends with UProxy.
         </p>
+        -->
 
         <div id="networks-box" ng-show="ui.isSplash()">
           <h3>Networks</h3>
