--- a/src/generic_ui/popup.html
+++ b/src/generic_ui/popup.html
@@ -57,9 +57,9 @@
           <div class="network-btn">
             <span ng-repeat="(network, detail) in model.networks">
               <button class="btn" ng-show="!isOnline(network)"
-              ng-click="login(network)">Login to {{ prettyNetworkName(network) }}</button>
+              ng-click="login(network)">Sign in to {{ prettyNetworkName(network) }}</button>
               <button class="btn" ng-show="isOnline(network)"
-                ng-click="core.logout(network)">Logout from {{ prettyNetworkName(network) }}</button>
+                ng-click="core.logout(network)">Sign out from {{ prettyNetworkName(network) }}</button>
             </span>
           </div>
         </div>
